Finished markup and CSS. To Do JS

--- a/index.html
+++ b/index.html
@@ -102,14 +102,30 @@
     <!-- About me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about"></p>
+      <p class="section__subtitle section__subtitle--about">
+        Developer based out of Manchester, UK
+      </p>
 
       <div class="about-me__body">
-        <p></p>
-        <p></p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
       </div>
 
-      <img src="img/dev-jane-02.jpg" alt="Jane leaning against a bus" />
+      <img
+        src="img/dev-jane-02.jpg"
+        class="about-me__img"
+        alt="Jane leaning against a bus"
+      />
     </section>
 
     <!-- My Work -->
@@ -136,7 +152,7 @@
           <img src="img/portfolio-05.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="#" class="portfolio__item">
-          <img src="portfolio-06.jpg" alt="" class="portfolio__img" />
+          <img src="img/portfolio-06.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="#" class="portfolio__item">
           <img src="img/portfolio-07.jpg" alt="" class="portfolio__img" />
@@ -160,18 +176,28 @@
 
       <ul class="social-media">
         <li class="social-media__item">
-          <a href="#" class="social-media__link">a</a>
+          <a href="#" class="social-media__link"
+            ><i class="fab fa-codepen"></i
+          ></a>
         </li>
         <li class="social-media__item">
-          <a href="#" class="social-media__link">b</a>
+          <a href="#" class="social-media__link"
+            ><i class="fab fa-dribbble"></i
+          ></a>
         </li>
         <li class="social-media__item">
-          <a href="#" class="social-media__link">c</a>
+          <a href="#" class="social-media__link"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </li>
         <li class="social-media__item">
-          <a href="#" class="social-media__link">d</a>
+          <a href="#" class="social-media__link"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
       </ul>
     </footer>
+
+    <script src="index.pack.js"></script>
   </body>
 </html>
