--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
       integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
       crossorigin="anonymous"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style.css" />
-    <title>DevJane Website</title>
+    <title>Oskar Dragon Portfolio</title>
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="img/devjane.png" alt="" />
-      </div>
+      <a href="index.html" class="logo">ODragon</a>
 
       <button class="nav-toggle" aria-label="toggle novigation">
         <span class="hamburger"></span>
@@ -56,7 +58,7 @@
       <p class="section__subtitle section__subtitle--intro">front-end dev</p>
       <img
         class="intro__img"
-        src="img/dev-jane-01.jpg"
+        src="img/portrait-image.jpg"
         alt="a picture of Jane Smith smiling"
       />
     </section>
@@ -122,21 +124,21 @@
       </div>
 
       <img
-        src="img/dev-jane-02.jpg"
+        src="img/oskar.jpg"
         class="about-me__img"
         alt="Jane leaning against a bus"
       />
     </section>
 
     <!-- My Work -->
-    <section class="my-work" id="#work">
+    <section class="my-work" id="work">
       <h2 class="section__title section__title--my-work">My Work</h2>
       <p class="section__subtitle section__subtitle--my-work">
         A section of my range of work
       </p>
 
       <div class="portfolio">
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-item.html" class="portfolio__item">
           <img src="img/portfolio-01.jpg" alt="" class="portfolio__img" />
         </a>
         <a href="#" class="portfolio__item">
@@ -163,15 +165,12 @@
         <a href="#" class="portfolio__item">
           <img src="img/portfolio-09.jpg" alt="" class="portfolio__img" />
         </a>
-        <a href="#" class="portfolio__item">
-          <img src="img/portfolio-10.jpg" alt="" class="portfolio__img" />
-        </a>
       </div>
     </section>
 
     <footer class="footer">
-      <a href="mailto:hello@devjane.com" class="email-address">
-        hello@devjane.com
+      <a href="mailto:hello@odragon.com" class="email-address">
+        hello@odragon.com
       </a>
 
       <ul class="social-media">
